Add EveryEquipmentCriterion
Signed-off-by: Olivier Perrin <olivier.perrin@rte-france.com>